[package]
name = "solana-client"
version = "0.4.0"
edition = "2021"
authors = ["Poseidon Compute Developers <support@poseidon.cloud>"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
poseidon-common = { features = [
    "sled_kv",
    "solana_client",
    "http",
    "rustls",
    "serde_json",
], git = "https://github.com/poseidoncompute/PoseidonCommon.git", rev = "d5a2798" }
json = "0.12.4"
serde_json = "1.0.79"
minreq = { version = "2.6.0", features = ["https-rustls"] }
borsh = "0.9.3"
rustls = "=0.20.2"

[features]
